Enhance SEO and Open Graph metadata in index.html
Added SEO metadata and Open Graph tags to improve search visibility and sharing on social media.

Signed-off-by: sarthakbhosale7113-art <sarthakbhosale7113@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,8 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Basic SEO -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Photo to PDF & PDF to Image Converter | Free Online Tool</title>
+
+<meta name="description" content="Free online tool to convert photos to PDF, PDF to images, crop images, and add photos to PDF. Fast, secure, and works directly in your browser.">
+<meta name="keywords" content="photo to pdf, pdf to image, image to pdf, crop image, add photo to pdf, free pdf tool, online pdf converter">
+<meta name="author" content="Your Name">
+
+<!-- Open Graph (for WhatsApp, Facebook, LinkedIn) -->
+<meta property="og:title" content="Photo to PDF & PDF to Image Converter">
+<meta property="og:description" content="Convert photos to PDF, PDF to images, crop images, and merge photos into PDFs — 100% free and online.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://your-site-url-here">
+<meta property="og:image" content="https://your-site-url-here/preview.png">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Photo to PDF & PDF to Image Converter">
+<meta name="twitter:description" content="Free online photo to PDF, PDF to image, crop and merge tool. No signup required.">
+<meta name="twitter:image" content="https://your-site-url-here/preview.png">
+
+<!-- Search Engine -->
+<meta name="robots" content="index, follow">
+
   <meta charset="UTF-8">
-  <title>Photo & PDF Tool</title>
 
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
@@ -53,3 +78,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
