Fix HTML encoding issues in index.html
Signed-off-by: sarthakbhosale7113-art <sarthakbhosale7113@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <meta property="og:description" content="Convert photos to PDF, PDF to images, crop images, and merge photos into PDFs — 100% free and online.">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://your-site-url-here">
-<meta property="og:image" content="https://your-site-url-here/preview.png">
+<meta property="og:image" content="https://sarthakbhosale7113-art.github.io/phototopdf/preview.jpeg">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Photo to PDF & PDF to Image Converter">
 <meta name="twitter:description" content="Free online photo to PDF, PDF to image, crop and merge tool. No signup required.">
-<meta name="twitter:image" content="https://your-site-url-here/preview.png">
+<meta name="twitter:image" content="https://sarthakbhosale7113-art.github.io/phototopdf/preview.jpeg">
 
 <!-- Search Engine -->
 <meta name="robots" content="index, follow">
@@ -78,4 +78,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
